delete unnecessary files add new files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>E-commerce shop</title>
 </head>
 <body>
-          <!--Navbar-->
+      <!--Navbar-->
         <nav>
            <div class="left">
            <a href="index.html" class="logo">
@@ -37,14 +37,16 @@
          
                 <a href="#contact"><i class="fas fa-envelope"></i></a>
           </div>
+          <ul>
+            <li></li>
+          </ul>
            </nav>
-          <main>
-     
-          <div class="products-container">
+           <main>
+               <div class="products-container">
       <div class="product">
           <img src="product1.jpg" alt="product 1">
-          <h2>Lancome La Vie Est Belle 75ml</h2>
-          <p>A fragrance with a powerful trail, with a perfect balance between the nobility of Iris, the depth of Patchouli, and an alluring Vanilla accord, creating the perfect scent of happiness.</p>
+          <h2><a href="product.html">Lancome La Vie Est Belle 75ml</h2></a>
+           <p>A fragrance with a powerful trail, with a perfect balance between the nobility of Iris, the depth of Patchouli, and an alluring Vanilla accord, creating the perfect scent of happiness.</p>
           <div class="product-footer">
           <p class="price">637 dkk</p>
           <button>
