adding updated files

--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
          
                 <a href="#contact"><i class="fas fa-envelope"></i></a>
           </div>
-          <ul>
-            <li></li>
-          </ul>
            </nav>
-           <main>
+           <header id="home"></header>
+           <main id="shop"></main>
                <div class="products-container">
       <div class="product">
           <img src="product1.jpg" alt="product 1">
@@ -92,7 +90,7 @@
   </div>
        </main>
 
-       <footer>
+       <footer id="contact">
         <nav>
           <div class="left">
         <p>Copyright © 2024 by ClickShop. All Rights Reserved.</p>
